Switched to an ArrayDeque implementation for major memory improvements